# math

math/: pyproject.toml
math/my_math/scripts/: main.py
