[tool.poetry]
name = "my_math"
version = "0.1.0"
description = ""
authors = ["DanilPorfirev1012 <porfirievdanil@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "my_math.scripts.main:start"